Point 3.1 from algorithm partialy realized. Different changes in mq4 file to create csv file to work with and get DataFrame.

--- a/AlgoTraidSketch.ipynb
+++ b/AlgoTraidSketch.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +91,11 @@
     "    A = np.vstack([x, np.ones(len(x))]).T\n",
     "    m, c = np.linalg.lstsq(A, y, rcond=None)[0]\n",
     "    if m < 0:\n",
-    "        _dir = 1\n",
+    "        _dir = -1\n",
     "    elif m > 0:\n",
-    "        _dir = 2\n",
+    "        _dir = 1\n",
     "    else:\n",
-    "        _dir = 'flat' #have to organize check for sideway trend somehow\n",
+    "        _dir = 0 #have to organize check for sideway trend somehow (28.02.2021 update: orginized via get_ength and calculating median for it)\n",
     "    return _dir"
    ]
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 7,
@@ -192,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.004381151746645721"
+       "0.0002631905737700386"
       ]
      },
      "execution_count": 9,
@@ -213,8 +213,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.00015139271255627622, 0.030076363611040473, 0.009798545452040851, 0.006116727272234097, 0.0032852727286320892, 0.0012104659950712049, 0.00015139271255627622, 0.00038988961038965135]\n",
-      "0.002247869361851647 0.00015139271255627622 0.030076363611040473 0.006397506261815115\n"
+      "[0.00012973199774435142, 0.0028358949273450495, 0.00284879549762838, 0.0013966716704505787, 0.0015977131690456234, 0.0008055569430657817, 0.00012973199774435142, 0.0004691149490754125]\n",
+      "0.0011011143067581803 0.00012973199774435142 0.00284879549762838 0.001276651394012441\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "73140 135665 106499.09090909091 118724.0\n"
+      "24462 135665 60449.675 107572.60000000002\n"
      ]
     }
    ],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,14 +343,7 @@
     "    primary = check_price(quotes.Close[0], x_scale[0].iloc[0], m, c)\n",
     "    traversal = 0\n",
     "    quotes['date_to_num'] = x_scale[0].values\n",
-    "    for t in x_scale[0]:        t_prim = check_price(quotes.Close.loc[quotes['date_to_num'] == t].values[0], t, m, c)\n",
-    "        if primary == t_prim:\n",
-    "            continue\n",
-    "        primary = t_prim\n",
-    "        traversal += 1\n",
-    "        if traversal > 4:\n",
-    "            return False\n",
-    "    return True\n",
+    "    for t in x_scale[0]:        \n",
     "        t_prim = check_price(quotes.Close.loc[quotes['date_to_num'] == t].values[0], t, m, c)\n",
     "        if primary == t_prim:\n",
     "            continue\n",
@@ -363,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +365,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,10 +376,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_df_testing(path, cur_pair, tf):\n",
+    "    import os\n",
+    "    import pandas as pd\n",
+    "    for name in os.listdir(path):\n",
+    "        cur_path = os.path.join(path, name)\n",
+    "        if os.path.isfile(cur_path) and cur_pair in name and tf in name:\n",
+    "            col_names=['DateTime','Open','High','Low','Close','Tick_Vol']\n",
+    "            df = pd.read_csv (cur_path, names=col_names)\n",
+    "            df['DateTime']=pd.to_datetime(df.pop('DateTime'))\n",
+    "            my_df = df.set_index('DateTime')\n",
+    "            return my_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas._libs.tslibs.timestamps.Timestamp"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = get_df_testing(os.curdir, 'NZDCHF', '240')\n",
+    "type(df.index[1])"
+   ]
   }
  ],
  "metadata": {
